# Learning-GenAI

./: .gitignore  main.py  notes.md  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
langchainbasics/: chatbot.py  langchain.ipynb  rag.ipynb  tools.ipynb
rag/: rag_data_ingestion_pipeline.ipynb
